test_data/Xml/Unexpected/Unserializable/InvalidClassName/valueReferencePair/wrong.xml.exception
Expected an element representing an instance of class ValueReferencePair with element name valueReferencePair, but got: utterlyInvalid at: the beginning